--- a/app/src/main/res/layout/activity_dettaglio_media.xml
+++ b/app/src/main/res/layout/activity_dettaglio_media.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
+    tools:ignore="HardcodedText"
     tools:context="unitn.app.activities.profilo.Profilo">
 
     <RelativeLayout
