--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,53 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:ignore="HardcodedText"
     tools:context="unitn.app.activities.auth.Login">
 
+    <RelativeLayout
+        android:id="@+id/main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="unitn.app.activities.auth.Login">
+
+        <TextView
+            android:id="@+id/titoloPagina"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
+            android:fontFamily="serif"
+            android:text="Login"
+            android:textSize="50sp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginHorizontal="50dp"
+            android:layout_marginTop="250dp"
+            android:autofillHints="name"
+            android:ems="10"
+            android:hint="Username"
+            android:inputType="text"
+            android:singleLine="true"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/loginButton"
+            style="@style/normalButton"
+            android:layout_width="match_parent"
+            android:layout_below="@+id/username"
+            android:layout_centerHorizontal="true"
+            android:layout_marginHorizontal="100dp"
+            android:layout_marginVertical="100dp"
+            android:text="Login" />
+
+        <Button
+            android:id="@+id/signInButton"
+            style="@style/normalButton"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginHorizontal="100dp"
+            android:layout_marginBottom="60dp"
+            android:width="400dp"
+            android:text="Crea Account" />
+    </RelativeLayout>
+
     <TextView
-        android:id="@+id/titoloPagina"
+        android:id="@+id/needUpdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:fontFamily="serif"
-        android:text="Login"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:visibility="gone"
+        android:text="App deve essere aggiornata"
         android:textSize="50sp"
         android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginHorizontal="50dp"
-        android:layout_marginTop="250dp"
-        android:ems="10"
-        android:hint="Username"
-        android:inputType="text"
-        android:singleLine="true"
-        android:textSize="20sp" />
-
-    <Button
-        style="@style/normalButton"
-        android:id="@+id/loginButton"
-        android:layout_width="match_parent"
-        android:layout_below="@+id/username"
-        android:layout_centerHorizontal="true"
-        android:layout_marginHorizontal="100dp"
-        android:layout_marginVertical="100dp"
-        android:text="Login" />
-
-    <Button
-        style="@style/normalButton"
-        android:id="@+id/signInButton"
-        android:width="400dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginHorizontal="100dp"
-        android:layout_marginBottom="60dp"
-        android:text="Crea Account" />
 </RelativeLayout>
