--- a/app/src/main/res/layout/activity_dettaglio_media.xml
+++ b/app/src/main/res/layout/activity_dettaglio_media.xml
@@ -1,142 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true"
-    tools:ignore="HardcodedText"
-    tools:context="unitn.app.activities.profilo.Profilo">
+    android:layout_height="wrap_content"
+    tools:context="unitn.app.activities.dettaglio.DettaglioMedia"
+    tools:ignore="HardcodedText">
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/titoloFilm"
+        style="@style/HeaderTitolo"
+        android:text="TitoloFilm" />
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/pageSelection"
+        android:layout_below="@id/titoloFilm"
+        style="@style/normalTabLayout" />
+
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/pager"
+        android:layout_marginHorizontal="14dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:context="unitn.app.activities.dettaglio.DettaglioMedia">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/pageSelection" />
 
-        <TextView
-            android:id="@+id/titoloFilm"
-            style="@style/HeaderTitolo"
-            android:text="TitoloFilm" />
+    <ImageButton
+        android:id="@+id/buttonDelete"
+        style="@style/dangerousImageButton"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="40dp"
+        android:layout_marginBottom="32dp"
+        android:contentDescription="Button to remove media from DB"
+        android:src="@drawable/delete_bin" />
 
-        <LinearLayout
-            android:id="@+id/posterAndInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/titoloFilm"
-            android:layout_marginStart="6dp"
-            android:layout_marginTop="15dp"
-            android:orientation="horizontal"
-            tools:layout_editor_absoluteX="16dp">
-
-
-            <ImageView
-                android:id="@+id/poster"
-                android:layout_width="170dp"
-                android:layout_height="260dp"
-                android:layout_below="@+id/titoloFilm"
-                android:contentDescription="Poster Image"
-                tools:srcCompat="@drawable/missing_poster" />
-
-            <LinearLayout
-                android:id="@+id/LayoutInfoFilm"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/HeaderInfoMedia"
-                    style="@style/Header"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Sinossi"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/sinossiText"
-                    style="@style/normalText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="10dp"
-                    android:scrollbarFadeDuration="@integer/material_motion_duration_medium_2"
-                    android:scrollbars="vertical"
-                    android:text="@string/lorem_ipsum_1"
-                    android:textAlignment="textStart" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/infoProvider"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/posterAndInfo"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="14dp"
-            android:layout_marginTop="22dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/DoveVederloText"
-                style="@style/Header"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:text="Dove Vederlo"
-                android:textSize="34sp" />
-
-            <TextView
-                android:id="@+id/infoProviderText"
-                style="@style/normalText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="-8sp"
-                android:text="Fonte: JustWatch"
-                android:textColor="#B78A8A8A"
-                android:textSize="12sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/plaformList"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:layout_below="@+id/infoProvider"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="14dp"
-            android:layout_marginTop="15dp"
-            android:orientation="horizontal" />
-
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/switchLocal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/plaformList"
-            android:layout_marginStart="14dp"
-            android:layout_marginTop="10dp"
-            android:text="In possesso          "
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <ImageButton
-            android:id="@+id/buttonDelete"
-            style="@style/dangerousImageButton"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="40dp"
-            android:layout_marginBottom="32dp"
-            android:contentDescription="Button to remove media from DB"
-            android:src="@drawable/delete_bin" />
-
-        <ImageButton
-            android:id="@+id/buttonSeen"
-            style="@style/normalImageButton"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="40dp"
-            android:layout_marginBottom="32dp"
-            android:background="@drawable/circle"
-            android:contentDescription="Button to mark media as seen"
-            android:src="@drawable/checkmark" />
-    </RelativeLayout>
-</ScrollView>
+    <ImageButton
+        android:id="@+id/buttonSeen"
+        style="@style/normalImageButton"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/circle"
+        android:contentDescription="Button to mark media as seen"
+        android:src="@drawable/checkmark" />
+</RelativeLayout>
