--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -31,7 +31,7 @@
                 style="@style/Header"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Durata:  "
+                android:text="Durata   "
                 android:textStyle="bold" />
 
             <TextView
@@ -57,7 +57,7 @@
                 style="@style/Header"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Genere:  "
+                android:text="Genere  "
                 android:textStyle="bold" />
 
             <TextView
