--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -19,7 +19,7 @@
             tools:srcCompat="@drawable/missing_poster" />
 
         <LinearLayout
-            android:id="@+id/InfoDurata"
+            android:id="@+id/infoDurata"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/poster"
@@ -45,10 +45,36 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/InfoGenere"
+            android:id="@+id/infoAnno"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/InfoDurata"
+            android:layout_below="@id/infoDurata"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/Header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Anno uscita   "
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/annoUscitaText"
+                style="@style/normalText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:text="1998-05-12"
+                android:textAlignment="textStart" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/infoGenere"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/infoAnno"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
@@ -74,10 +100,11 @@
             android:id="@+id/LayoutInfoFilm"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/InfoGenere"
+            android:layout_below="@id/infoGenere"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:orientation="vertical">
+
             <TextView
                 style="@style/Header"
                 android:layout_width="wrap_content"
@@ -95,7 +122,6 @@
                 android:text="@string/lorem_ipsum_1"
                 android:textAlignment="textStart" />
         </LinearLayout>
-
 
 
         <TextView
