Fixed some UI issues

--- a/app/src/main/res/layout/fragment_sezione_note.xml
+++ b/app/src/main/res/layout/fragment_sezione_note.xml
@@ -2,6 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
+    android:focusableInTouchMode="true"
     tools:context="unitn.app.activities.dettaglio.FragmentSezioneNote">
 
     <TextView
@@ -22,17 +24,17 @@
         android:background="@color/Grigio"
         android:gravity="top|start"
         android:hint="Annotati le tue note"
-        android:paddingHorizontal="5dp"
         android:inputType="textMultiLine"
-        android:lines="4"
+        android:minLines="4"
+        android:paddingHorizontal="5dp"
         android:scrollbars="vertical" />
 
     <Button
         android:id="@+id/buttonSaveNote"
         style="@style/normalButton"
+        android:layout_below="@id/note"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
-        android:layout_below="@id/note"
-        android:text="Salva"/>
+        android:text="Salva" />
 
 </RelativeLayout>
