--- a/app/src/main/res/layout/activity_aggiungi_media.xml
+++ b/app/src/main/res/layout/activity_aggiungi_media.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:ignore="HardcodedText"
     tools:context="unitn.app.activities.dettaglio.DettaglioMedia">
 
     <ScrollView
@@ -16,7 +17,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             tools:context="unitn.app.activities.dettaglio.DettaglioMedia">
 
             <LinearLayout
@@ -36,6 +37,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:orientation="horizontal"
+                    android:paddingHorizontal="10dp"
                     android:textColor="@color/invertedTextColor">
 
                     <TextView
@@ -43,8 +45,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:text="Film o SerieTv "
+                        android:text="Film"
                         android:textColor="@color/invertedTextColor"
+                        android:layout_marginRight="10dp"
                         android:textSize="16sp" />
 
                     <TextView
@@ -52,7 +55,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:text="(1999)"
+                        android:text="1999"
                         android:textColor="@color/invertedTextColor"
                         android:textSize="16sp" />
 
@@ -115,7 +118,7 @@
                     style="@style/Header"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Directors and Executive Producers"
+                    android:text="Crew"
                     android:textStyle="bold" />
 
                 <TextView
