--- a/app/src/main/res/layout/activity_dettaglio_media.xml
+++ b/app/src/main/res/layout/activity_dettaglio_media.xml
@@ -14,35 +14,40 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/pageSelection"
-        android:layout_below="@id/titoloFilm"
-        style="@style/normalTabLayout" />
+        style="@style/normalTabLayout"
+        android:layout_below="@id/titoloFilm" />
 
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/pager"
-        android:layout_marginHorizontal="14dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/pageSelection" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/pageSelection"
+        android:layout_marginHorizontal="14dp" />
 
     <ImageButton
         android:id="@+id/buttonDelete"
         style="@style/dangerousImageButton"
+        android:layout_above="@id/empty_view"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="40dp"
-        android:layout_marginBottom="32dp"
         android:contentDescription="Button to remove media from DB"
         android:src="@drawable/delete_bin" />
 
     <ImageButton
         android:id="@+id/buttonSeen"
         style="@style/normalImageButton"
+        android:layout_above="@id/empty_view"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginEnd="40dp"
-        android:layout_marginBottom="32dp"
         android:background="@drawable/circle"
         android:contentDescription="Button to mark media as seen"
         android:src="@drawable/checkmark" />
+
+    <View
+        android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:layout_alignParentBottom="true"
+        android:visibility="invisible" />
 </RelativeLayout>
