--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
+    tools:ignore="HardcodedText"
     android:layout_height="match_parent"
     tools:context="unitn.app.activities.homepage.HomePage">
 
