--- a/app/src/main/res/layout/activity_profilo.xml
+++ b/app/src/main/res/layout/activity_profilo.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:ignore="HardcodedText"
-    tools:context="unitn.app.activities.profilo.Profilo">
+    tools:context="unitn.app.activities.profilo.Profilo"
+    tools:ignore="HardcodedText">
 
     <TextView
         android:id="@+id/titolo"
@@ -15,30 +14,200 @@
         android:layout_height="78dp"
         android:text="Ciao, $NomeUtente" />
 
-    <com.google.android.material.tabs.TabLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:foregroundGravity="center"
-        app:tabIndicatorFullWidth="true"
-        android:id="@+id/pageSelection"
-        app:tabTextColor="@color/normalText"
-        app:tabIndicatorColor="@color/normalText"
-        android:layout_below="@id/titolo"/>
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/pageSelection" />
+        android:layout_below="@id/titolo"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="30dp"
+        android:orientation="vertical">
 
 
-    <ImageButton
-        android:id="@+id/buttonSave"
-        style="@style/normalImageButton"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
-        android:layout_centerHorizontal="true"
-        android:contentDescription="Salva e vai a homepage"
-        android:src="@drawable/checkmark"/>
+        <LinearLayout
+            android:id="@+id/GoToSelezioneTema"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
+            <ImageButton
+                style="@style/normalImageButton"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="10dp"
+                android:backgroundTint="#4D9A9A9A"
+                android:contentDescription=" "
+                android:src="@drawable/settings" />
+
+            <TextView
+                style="@style/normalText"
+                android:text="Personalizza"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:layout_marginVertical="20dp"
+            android:layout_marginEnd="60dp"
+            android:background="#DC292929" />
+
+
+        <LinearLayout
+            android:id="@+id/GoToAccount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageButton
+                style="@style/normalImageButton"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="10dp"
+                android:backgroundTint="#4D9A9A9A"
+                android:contentDescription=" "
+                android:src="@drawable/settings" />
+
+            <TextView
+                style="@style/normalText"
+                android:text="Account"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:layout_marginVertical="20dp"
+            android:layout_marginEnd="60dp"
+            android:background="#DC292929" />
+
+
+        <LinearLayout
+            android:id="@+id/GoToCronologia"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageButton
+                style="@style/normalImageButton"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="10dp"
+                android:backgroundTint="#4D9A9A9A"
+                android:contentDescription=" "
+                android:src="@drawable/settings" />
+
+            <TextView
+                style="@style/normalText"
+                android:text="Cronologia"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:layout_marginVertical="20dp"
+            android:layout_marginEnd="60dp"
+            android:background="#DC292929" />
+
+
+        <LinearLayout
+            android:id="@+id/GoToStatistiche"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageButton
+                style="@style/normalImageButton"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="10dp"
+                android:backgroundTint="#4D9A9A9A"
+                android:contentDescription=" "
+                android:src="@drawable/settings" />
+
+            <TextView
+                style="@style/normalText"
+                android:text="Statistiche"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/infoSito"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:orientation="vertical"
+            android:paddingHorizontal="10dp">
+
+            <TextView
+                style="@style/Header"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Versione web:"
+                android:textAlignment="textStart" />
+
+            <TextView
+                android:id="@+id/URLsito"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="@string/link_to_the_website"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/buttonLogOff"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:orientation="horizontal">
+
+            <ImageButton
+                style="@style/normalImageButton"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="10dp"
+                android:backgroundTint="#4D9A9A9A"
+                android:contentDescription=" "
+                android:src="@drawable/cross" />
+
+            <TextView
+                style="@style/normalText"
+                android:text="Logout | Esci dall'account"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="60dp"
+            android:background="#DC292929" />
+
+
+        <LinearLayout
+            android:id="@+id/buttonDeleteAccount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+
+            <ImageButton
+                style="@style/dangerousImageButton"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="10dp"
+                android:contentDescription=" "
+                android:src="@drawable/delete_bin" />
+
+            <TextView
+                style="@style/normalText"
+                android:text="Cancella account"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
