--- a/app/src/main/res/layout/activity_profilo_account.xml
+++ b/app/src/main/res/layout/activity_profilo_account.xml
@@ -1,9 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/main"
     android:layout_height="match_parent"
     tools:ignore="HardcodedText"
-    tools:context="unitn.app.activities.profilo.FragmentPiattaforme">
+    tools:context="unitn.app.activities.profilo.ProfiloAccount">
 
     <LinearLayout
         android:id="@+id/containerPiattaforme"
@@ -59,33 +61,39 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/infoSito"
-        android:layout_width="match_parent"
+
+    <TextView
+        android:id="@+id/header"
+        android:layout_below="@id/containerPiattaforme"
+        style="@style/Header"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/containerPiattaforme"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:text="Modifica username" />
+
+    <EditText
+        android:id="@+id/username"
+        style="@style/normalText"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/header"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="40dp"
-        android:orientation="vertical"
-        android:paddingHorizontal="10dp">
+        android:layout_marginTop="20dp"
+        android:autofillHints="name"
+        android:inputType="textNoSuggestions"
+        android:lines="1"
+        android:text="Username"
+        tools:ignore="LabelFor" />
 
-        <TextView
-            style="@style/Header"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="Per la versione web visitare:"
-            android:textAlignment="textStart" />
 
-        <TextView
-            android:id="@+id/URLsito"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="@string/link_to_the_website"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
-    </LinearLayout>
+    <Button
+        android:id="@+id/btnSaveUsername"
+        style="@style/normalButton"
+        android:layout_below="@id/username"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:contentDescription="Esci dall'account"
+        android:text="Salva" />
 
 </RelativeLayout>
