--- a/app/src/main/res/layout/activity_profilo_selezione_tema.xml
+++ b/app/src/main/res/layout/activity_profilo_selezione_tema.xml
@@ -1,8 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/main"
     android:layout_height="match_parent"
-    tools:context="unitn.app.activities.profilo.FragmentPersonalizzazioneUI"
+    tools:context="unitn.app.activities.profilo.ProfiloSelezioneTema"
     tools:ignore="HardcodedText">
 
 
