--- a/app/src/main/res/layout/activity_dettaglio_media.xml
+++ b/app/src/main/res/layout/activity_dettaglio_media.xml
@@ -30,24 +30,25 @@
         style="@style/dangerousImageButton"
         android:layout_above="@id/empty_view"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="25dp"
         android:contentDescription="Button to remove media from DB"
         android:src="@drawable/delete_bin" />
 
-    <ImageButton
+    <Button
         android:id="@+id/buttonSeen"
-        style="@style/normalImageButton"
+        style="@style/normalButton"
         android:layout_above="@id/empty_view"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="40dp"
-        android:background="@drawable/circle"
-        android:contentDescription="Button to mark media as seen"
-        android:src="@drawable/checkmark" />
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="3dp"
+        android:paddingVertical="15dp"
+        android:textSize="15sp"
+        android:text="Segna come visto" />
 
     <View
         android:id="@+id/empty_view"
         android:layout_width="match_parent"
-        android:layout_height="32dp"
+        android:layout_height="28dp"
         android:layout_alignParentBottom="true"
         android:visibility="invisible" />
 </RelativeLayout>
