--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="Rosso">#F2FF0E0E</color>
     <color name="Grigio">#E6EAEAEA</color>
     <color name="GrigioScuro">#E69E9E9E</color>
+    <color name="Giallo">#e0ad02</color>
 </resources>
